2006-08-30  Paul Eggert  <eggert@cs.ucla.edu>

	For PR automake/501:
	* lib/am/depend2.am (?GENERIC?%EXT%.o, ?!GENERIC?%OBJ%):
	Abbreviate output a bit by not bothering to quote the .Po file
	name (the quoting doesn't suffice in general anyway), and by not
	bothering to remove junk .Tpo files (as they'll be removed later).
	This also lets 'make' run faster by avoiding a subshell.

2006-08-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in: Fortran 77 and Fortran should require variables
	F77 resp. FC to be defined, and suggest the respective Autoconf
	macros otherwise.
	* tests/fort1.test: New test.
	* tests/Makefile.am: Update.

	* tests/ext.test: Add extensions f95, F90, F95.

2006-08-30  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/500:
	* automake.in (handle_compile) <$default_includes>: Do not output
	the same -I twice.  Use @am__isrc@ instead of ` -I$(srcdir)'.
	* m4/init.m4: Define am__isrc as ` -I$(srcdir)' only in
	non-VPATH builds since we always have `-I.'.
	* tests/subpkg.test: Make sure config headers are found in VPATH
	and non-VPATH builds.

2006-08-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi, lib/Automake/Rule.pm: Fix some typos.
	* NEWS: Likewise.  Clarify that only one LIBOBJDIR is supported.

2006-08-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/ChannelDefs.pm (usage): Mention that -Wportability
	is enabled by default with gnu and gnits strictness.
	Report from Bruno Haible.

2006-08-22  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Mark de-ANSI-fication as being obsolete.
	* doc/automake.texi: Likewise.

2006-08-21  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am, THANKS: Fix typos.

2006-08-20  Alexandre Duret-Lutz  <adl@gnu.org>

	* NEWS, configure.ac: Bump version to 1.9c.

	* NEWS, configure.ac: Bump version to 1.9b.

	* Makefile.am (maintainer-check): Check for mkdir_p in automake.in
	too.
	* automake.in (require_build_directory): Use MKDIR_P, not mkdir_p.
