@@ -19,6 +19,7 @@
 # Boston, MA 02110-1301, USA.
 
 # Test for PR 400: XFAIL_TESTS delimited by TABs.
+# Also test that Solaris make VPATH rewriting is honored
 
 . ./defs || exit 1
 
@@ -49,4 +50,9 @@ $AUTOCONF
 $AUTOMAKE -a
 
 ./configure
+$MAKE check
+$MAKE distclean
+mkdir build
+cd build
+../configure
 $MAKE check
