@@ -1,3 +1,11 @@
+2006-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/am/check.am (check-TESTS): Fix matching of XFAIL_TESTS
+	against currently running test for the first and last element
+	of $(TESTS): add spacing so Solaris make does VPATH expansion
+	on these words, too.
+	* tests/check6.test: Update.
+
 2006-08-30  Paul Eggert  <eggert@cs.ucla.edu>
 
 	For PR automake/501:
